Fixed white space under footer.

--- a/css/index.css
+++ b/css/index.css
@@ -117,6 +117,7 @@ a:hover {
 	font-size: 11px;
 	padding-top: 10px;
 	padding-bottom: 10px;
+	margin-bottom: 0px;
 }
 
 @media (max-width: 550px) {
